div do slogan concluida + adição de imagens

--- a/home.html
+++ b/home.html
@@ -44,7 +44,26 @@
     </div>
 
 
+    <!--div slogan-->
+    <div class="conteiner">
+        <div class="ajust-linha-slogan row align-content-center justify-content-center">
+            <div class="alinhamento-slogan col-12 align-self-center">
+                <h1>
+                    WILLVOOS:
+                    <br/>
+                    O MAPA DA SUA PRÓXIMA
+                    <br/>
+                    AVENTURA!
+                </h1>
+
+                <img class="imagem-slogan img-fluid" src="./img/home/imagem-inicial0.svg" alt="slogan-willvoos">
+            </div>
+        </div>
+    </div>
+
+
     
+    <!---->
 
 </body>
 </html>
