div destinos populares concluida

--- a/home.html
+++ b/home.html
@@ -62,8 +62,48 @@
     </div>
 
 
-    
-    <!---->
+
+    <!--div destinos populares-->
+    <div class="destinos-populares conteiner-fluid">
+        <div class="alinhamento-introducao-destinos-populares row">
+            <div class="introducao-destinos-populares col-12 align-self-start">
+                <h2>
+                    Destinos mais requisitados por nossos clientes.
+                </h2>
+                <h3>
+                    Venha você também fazer parte desta jornada emocionante e memorável!!
+                </h3>
+            </div>
+        </div>
+
+        <div class="destinos-populares-cont row align-items-center justify-content-center">
+            <div class="alinhamento-destpop-cont-text col-4 align-self-center">
+                <img class="imagem-destinos-populares img-fluid" src="./img/imagem-1-campo-20.png" alt="praia-do-morro-branco">
+                <p>
+                    Praia do Morro Branco
+                    <br>
+                    Fortaleza-CE
+                </p>
+            </div>
+            <div class="alinhamento-destpop-cont-text col-4 align-self-center">
+                <img class="imagem-destinos-populares img-fluid" src="./img/imagem-2-campo-20.png" alt="lencois-maranheses">
+                <p>
+                    Lençois Maranhenses
+                    <br>
+                    Barreirinhas-MA
+                </p>
+            </div>
+            <div class="alinhamento-destpop-cont-text col-4 align-self-center">
+                <img class="imagem-destinos-populares img-fluid" src="./img/imagem-3-campo-20.png" alt="praia-do-espelho">
+                <p>
+                    Praia do Espelho
+                    <br>
+                    Porto Seguro-BA
+                </p>
+            </div>
+        </div>
+    </div>
+
 
 </body>
 </html>
