div footer concluida

--- a/home.html
+++ b/home.html
@@ -105,5 +105,41 @@
     </div>
 
 
+
+    <!--div footer-->
+    <div class="footer conteiner-fluid">
+        <div class="alinhamento-cont-footer row align-items-center justify-content-center">
+            <div class="links-menu-footer col-8 align-self-center">
+                <a href="#">HOME</a>
+                <a href="#">DESTINOS INTERNACIONAIS</a>
+                <a href="#">OFERTAS DE VOOS</a>
+                <a href="#">DESTINOS NACIONAIS</a>
+                <a href="#">PRODUTOS</a>
+            </div>
+        </div>
+
+        <div class="alinhamento-cont-footer row align-items-center justify-content-center">
+            <div class="icons-footer col-4 align-self-center">
+                <a href="#">
+                    <img class="img-fluid" src="./img/instagram-circle0.png" alt="icon-instagram">
+                </a>
+                <a href="#">
+                    <img class="img-fluid" src="./img/facebook0.png" alt="icon-fecebook">
+                </a>
+                <a href="#">
+                    <img class="img-fluid" src="./img/contacts0.png" alt="icon-contatos">
+                </a>
+            </div>
+        </div>
+
+        <div class="alinhamento-direitos-autorais row align-items-center justify-content-center">
+            <div class="direitos-autorais col">
+                <p>
+                    &copy; Todos os direitos reservados | WILLVOOS.
+                </p>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
