adicao do icon do site + imgs

--- a/home.html
+++ b/home.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="home-style.css">
 
 
+    <!--icone do site-->
+    <link rel="icon" href="./img/home/ICON-LOGO.png" type="image/png">
     <title>WILL VOOS</title>
 </head>
 <body>
@@ -78,7 +80,7 @@
 
         <div class="destinos-populares-cont row align-items-center justify-content-center">
             <div class="alinhamento-destpop-cont-text col-4 align-self-center">
-                <img class="imagem-destinos-populares img-fluid" src="./img/imagem-1-campo-20.png" alt="praia-do-morro-branco">
+                <img class="imagem-destinos-populares img-fluid" src="./img/home/imagem-1-campo-20.png" alt="praia-do-morro-branco">
                 <p>
                     Praia do Morro Branco
                     <br>
@@ -86,7 +88,7 @@
                 </p>
             </div>
             <div class="alinhamento-destpop-cont-text col-4 align-self-center">
-                <img class="imagem-destinos-populares img-fluid" src="./img/imagem-2-campo-20.png" alt="lencois-maranheses">
+                <img class="imagem-destinos-populares img-fluid" src="./img/home/imagem-2-campo-20.png" alt="lencois-maranheses">
                 <p>
                     Lençois Maranhenses
                     <br>
@@ -94,7 +96,7 @@
                 </p>
             </div>
             <div class="alinhamento-destpop-cont-text col-4 align-self-center">
-                <img class="imagem-destinos-populares img-fluid" src="./img/imagem-3-campo-20.png" alt="praia-do-espelho">
+                <img class="imagem-destinos-populares img-fluid" src="./img/home/imagem-3-campo-20.png" alt="praia-do-espelho">
                 <p>
                     Praia do Espelho
                     <br>
