div descubra mais finalizada

--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
 
 
     <!--icone do site-->
-    <link rel="icon" href="./img/home/ICON-LOGO.png" type="image/png">
+    <link rel="icon" href="./img/img_geral/ICON-LOGO.png" type="image/png">
     <title>WILL VOOS</title>
 </head>
 <body>
@@ -23,7 +23,7 @@
         <nav class="nav-bar-home navbar navbar-expand-lg">
             <div class="container-fluid justify-content-evenly">
               <a class="navbar-brand" href="#">
-                <img src="./img/home/LOGO.png" alt="logo-willvoos" class="img-fluid imagem-logo-nav-bar">
+                <img src="./img/img_geral/LOGO.png" alt="logo-willvoos" class="img-fluid imagem-logo-nav-bar">
               </a>
 
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,7 +37,7 @@
                   <a class="nav-link" href="#">DESTINOS INTERNACIONAIS</a>
                   <a class="nav-link" href="#">OFERTAS DE VOOS</a>
                   <a class="nav-link" href="#">DESTINOS NACIONAIS</a>
-                  <a class="nav-link" href="#">PRODUTOS</a>
+                  <a class="nav-link" href="#">ACOMODAÇÕES</a>
                 </div>
 
               </div>
@@ -107,6 +107,52 @@
     </div>
 
 
+    <!--div de descrubra mais-->
+    <div class="descubra-mais conteiner">
+        <div class="titulo-texto-campo3 row justify-content-center align-items-center">
+            <div class="titulo-campo3 col-12 align-self-center">
+                <h2>
+                    DESCUBRA MAIS
+                </h2>
+            </div>
+            <div class="texto-campo3 col-12 align-self-center">
+                <p>
+                    Aqui você tem várias opções para suas férias e <br> muitas ofertas para não pesar no seu bolso!!
+                </p>
+            </div>
+        </div>
+
+
+        <div class="alinhamento-texto-img-descubra-mais row">
+            <div class="texto1-img1-descubra-mais col align-self-end">
+                <h3>
+                    DESTINOS <br>
+                    INTERNACIONAIS
+                </h3>
+                <img class="imagem1-campo3 img-fluid" src="./img/home/img1-campo3.jpg" alt="torre-eiffel">
+            </div>
+
+            <div class="texto2-img2-descubra-mais col align-self-end">
+                <h3>
+                    OFERTAS DE VOOS
+                </h3>
+                <img class="imagem2-campo3 img-fluid" src="./img/home/img2-campo3.jpg" alt="janela-de-um-avião">
+            </div>
+
+            <div class="texto3-img3-descubra-mais col align-self-end">
+                <h3>
+                    DESTINOS <br>
+                    NACIONAIS
+                </h3>
+                <img class="imagem3-campo3 img-fluid" src="./img/home/img3-campo3.jpg" alt="cristo-redentor">
+            </div>
+
+        </div>
+
+    </div>
+
+
+
 
     <!--div footer-->
     <div class="footer conteiner-fluid">
@@ -116,20 +162,20 @@
                 <a href="#">DESTINOS INTERNACIONAIS</a>
                 <a href="#">OFERTAS DE VOOS</a>
                 <a href="#">DESTINOS NACIONAIS</a>
-                <a href="#">PRODUTOS</a>
+                <a href="#">ACOMODAÇÕES</a>
             </div>
         </div>
 
         <div class="alinhamento-cont-footer row align-items-center justify-content-center">
             <div class="icons-footer col-4 align-self-center">
                 <a href="#">
-                    <img class="img-fluid" src="./img/instagram-circle0.png" alt="icon-instagram">
+                    <img class="img-fluid" src="./img/img_geral/instagram-circle0.png" alt="icon-instagram">
                 </a>
                 <a href="#">
-                    <img class="img-fluid" src="./img/facebook0.png" alt="icon-fecebook">
+                    <img class="img-fluid" src="./img/img_geral/facebook0.png" alt="icon-fecebook">
                 </a>
                 <a href="#">
-                    <img class="img-fluid" src="./img/contacts0.png" alt="icon-contatos">
+                    <img class="img-fluid" src="./img/img_geral/contacts0.png" alt="icon-contatos">
                 </a>
             </div>
         </div>
