ajustes na página home

--- a/home.html
+++ b/home.html
@@ -47,21 +47,22 @@
 
 
     <!--div slogan-->
-    <div class="conteiner">
-        <div class="ajust-linha-slogan row align-content-center justify-content-center">
-            <div class="alinhamento-slogan col-12 align-self-center">
-                <h1>
-                    WILLVOOS:
-                    <br/>
-                    O MAPA DA SUA PRÓXIMA
-                    <br/>
-                    AVENTURA!
-                </h1>
 
-                <img class="imagem-slogan img-fluid" src="./img/home/imagem-inicial0.svg" alt="slogan-willvoos">
+
+    <div class="campo-slogan conteiner">
+        <div class="alinhamento-conteudo-slogan row justify-content-center">
+            <div class="conteudo-slogan col align-self-end">
+                <h1>
+                    WILLVOOS: <br>
+                    O MAPA DA SUA <br>
+                    PRÓXIMA <br>
+                    AVENTURA!!
+                </h1>
+                <img class="imagem-slogan img-fluid" src="./img/home/imagem-inicial0.svg" alt="avião">
             </div>
         </div>
     </div>
+
 
 
 
