ajustes na navbar e alinhamneto das divs: 'descubra mais' e 'footer'

--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
 
-              <div class="menu-home collapse navbar-collapse">
+              <div class="menu-home collapse navbar-collapse" id="navbarNavAltMarkup">
 
                 <div class="ajust-menu-home navbar-nav">
                   <a class="nav-link" href="#">HOME</a>
@@ -126,25 +126,31 @@
 
         <div class="alinhamento-texto-img-descubra-mais row">
             <div class="texto1-img1-descubra-mais col align-self-end">
-                <h3>
-                    DESTINOS <br>
-                    INTERNACIONAIS
-                </h3>
+                <a href="#">
+                    <h3 class="texto1-img1-campo3">
+                        DESTINOS <br>
+                        INTERNACIONAIS
+                    </h3>
+                </a>
                 <img class="imagem1-campo3 img-fluid" src="./img/home/img1-campo3.jpg" alt="torre-eiffel">
             </div>
 
             <div class="texto2-img2-descubra-mais col align-self-end">
-                <h3>
-                    OFERTAS DE VOOS
-                </h3>
+                <a href="#">
+                    <h3 class="texto2-img2-campo3">
+                        OFERTAS DE VOOS
+                    </h3>
+                </a>
                 <img class="imagem2-campo3 img-fluid" src="./img/home/img2-campo3.jpg" alt="janela-de-um-avião">
             </div>
 
             <div class="texto3-img3-descubra-mais col align-self-end">
-                <h3>
-                    DESTINOS <br>
-                    NACIONAIS
-                </h3>
+                <a href="#">
+                    <h3 class="texto3-img3-campo3">
+                        DESTINOS <br>
+                        NACIONAIS
+                    </h3>
+                </a>
                 <img class="imagem3-campo3 img-fluid" src="./img/home/img3-campo3.jpg" alt="cristo-redentor">
             </div>
 
@@ -184,7 +190,7 @@
         <div class="alinhamento-direitos-autorais row align-items-center justify-content-center">
             <div class="direitos-autorais col">
                 <p>
-                    &copy; Todos os direitos reservados | WILLVOOS.
+                    &copy; Todos os direitos reservados 2025 | WILLVOOS.
                 </p>
             </div>
         </div>
