--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <!--link css-------------------------->
-    <link rel="stylesheet" href="home-style.css">
+    <link rel="stylesheet" href="index_style.css">
 
 
     <!--icone do site-->
